# PowerGenome-tools

./: .gitignore  README.md  hooks.py  mkdocs.yml  pyproject.toml
.github/: copilot-instructions.md
.github/agents/: docs-writer.agent.md  test-writer.agent.md
.github/workflows/: deploy-pages.yml  tests.yml  update-data.yml
data/: atb_options.json  fuel_prices.csv  plant_region_map.csv  reeds_generators_transformed.csv  transmission_capacity_reeds.csv
data/state_policies/: allowed_techs.csv  state-pop-fraction.csv  tech_map.csv
docs/: algorithms.md  development.md  index.md  web_app.md
tests/: test_cluster_app.py
web/: build_atb_options.py  build_fuel_prices.py  cluster_app.py  index.html  pyscript.toml
